--- a/css/styles.css
+++ b/css/styles.css
@@ -131,6 +131,7 @@ img {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    max-width: 85%;
 }
 
 .nav__logo,
@@ -227,6 +228,11 @@ img {
     bottom: 1rem;
     transform: rotate(-30deg);
 
+}
+
+
+.nav_ilumination-name a{
+    color: var(--firts-color);
 }
 
 
@@ -503,6 +509,8 @@ img {
     justify-content: center;
     padding: .4rem;
     position: relative;
+    padding-bottom: 2rem;
+    padding-top: 5rem;
 }
 
 .newsletter__container {
@@ -579,7 +587,7 @@ img {
     position: absolute;
     width: 30px;
     right: 4rem;
-    bottom: -1rem;
+    bottom: 1rem;
     transform: rotate(25deg);
 }
 
@@ -609,6 +617,7 @@ footer {
     display: grid;
     grid-template-columns: 40% 40%;
     row-gap: 2rem;
+    column-gap: 2rem;
 }
 
 .footer__title {
@@ -632,15 +641,30 @@ footer {
 }
 
 .footer__social {
+    position: relative;
     display: flex;
+    column-gap: 1rem;
     justify-content: space-between;
     font-size: 1.5rem;
     margin-top: 1rem;
+    max-width: 50px;
+}
+
+.footer__social-link p {
+    transition: transform .3s, color .3s;
 }
 
 .footer__social i {
     color: var(--firts-color);
 }
+
+.footer__social-link:hover p{
+    transform: translateY(-.25rem);
+    color: var(--firts-color-alt);
+    transition: transform .3s, color .3s;
+    
+}
+
 
 .footer__container {
     position: relative;
@@ -691,4 +715,54 @@ footer {
 
 .footer__copy {
     font-size: var(--small-font-size);
+}
+
+/*------ scroll nav styles ------*/
+
+::-webkit-scrollbar {
+    width: .6rem;
+    border-radius: .5rem;
+    background-color: hsl(19, 8%, 75%);
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: .5rem;
+    background: hsl(19, 8%, 65%);
+    transition: color .3s;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: hsl(19, 8%, 55%);
+    transition: color .3s;
+}
+
+/*------ scroll up buttom ------*/
+
+.scrollup {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
+    font-weight: 500;
+    color: var(--firts-color);
+    border-radius: .3rem;
+    bottom: 3rem;
+    right: 3rem;
+    background-color: #fff;
+    height: 2rem;
+    width: 2rem;
+    box-shadow: 0 4px 12px hsla(19, 64%, 24%, .1);
+    transition: transform .3s;
+    transition: bottom .10s;
+}
+
+.scrollup-hidden {
+    bottom: -50%;
+    transition: bottom .10s;
+}
+
+.scrollup:hover {
+    transform: translateY(-.24rem);
+    transition: transform .3s;
 }
