--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,9 @@ body {
     font-size: var(--normal-font-size);
     background-color: var(--body-color);
     color: var(--text-color);
+    transition: background-color .3s;
+    margin: 0;
+    padding: 0;
 }
 
 h1, h2, h3 {
@@ -107,17 +110,20 @@ img {
 }
 
 .main {
-    overflow: hidden;
+    width: 100%;
+    justify-content: center;
+    padding: 0;
+    margin: 0;
 }
 
 .header {
     position: fixed;
-    width: 100%;
+    width: 90%;
     background-color: var(--body-color);
     top: 0;
     left: 0;
     z-index: var(--z-fixed);
-    transition: box-shadow .3s, background .4s;
+    transition: box-shadow .3s, background .3s;
 
 }
 
@@ -131,7 +137,6 @@ img {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 85%;
 }
 
 .nav__logo,
@@ -231,15 +236,30 @@ img {
 }
 
 
-.nav_ilumination-name a{
+.nav_ilumination-name{
     color: var(--firts-color);
 }
 
+
+.nav__buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 1rem;
+}
+
+.change-theme {
+    font-size: 1.24rem;
+    color: var(--title-color);
+    cursor: pointer;
+    transition: color .3s;
+}
 
 
 /*------------HOME------------*/
 .home {
     position: relative;
+    width: 100%;
 }
 
 .home__container {
@@ -329,6 +349,10 @@ img {
 
 
 /*----------ABOUT SECTION----------*/
+.about {
+    position: relative;
+}
+
 .about__container {
     display: grid;
     position: relative;
@@ -361,8 +385,8 @@ img {
     position: absolute;
     width: 100px;
     opacity: .2;
-    right: -.5rem;
-    bottom: 250px;
+    right: -3rem;
+    bottom: 5rem;
     transform: rotate(-20deg);
 }
 
@@ -551,6 +575,8 @@ img {
 
 
 .newsletter__button {
+    position: absolute;
+    right: 1.2rem;
     display: flex;
     gap: 0;
     border: none;
@@ -765,4 +791,20 @@ footer {
 .scrollup:hover {
     transform: translateY(-.24rem);
     transition: transform .3s;
+}
+
+/*------------ darck mode -------------*/
+body.dark-theme {
+--first-color: hsl(19, 64%, 58%);
+--first-color-alt: hsl(19, 64%, 54%);
+--title-color: hsl(19, 24%, 85%);
+--text-color: hsl(19, 16%, 65%);
+--body-color: hsl(19, 12%, 8%);
+--container-color: hsl(19, 10%, 10%);
+--conteiner-color: hsl(19, 10%, 10%);
+}
+
+body {
+    background-color: .3s;
+    width: 100%;
 }
