--- a/css/styles.css
+++ b/css/styles.css
@@ -72,8 +72,7 @@ img {
 }
 
 .container {
-    max-width: 1024px;
-    margin-inline: 1.5rem;
+    margin: 10px;
 }
 
 .section {
@@ -83,6 +82,52 @@ img {
 .grid {
     display: grid;
     gap: 1.5rem;
+}
+
+@media (width >= 915px) {
+    .home__container, .about__container, .popular__container, .recently__container{
+        display: grid;
+        gap: 1.5rem;
+        grid-template-columns: auto auto auto;
+    }
+
+    .footer__container {
+        display: grid;
+        grid-template-columns: 250px auto;
+    }
+
+    #footer__content__two {
+        display: grid;
+        grid-template-columns: auto auto auto auto;
+    }
+
+    .ri-apps-2-line, .ri-close-fill {
+        display: none;
+    }
+
+    .nav__menu {
+        display: block;
+    }
+
+    .nav__list__full {
+        display: grid;
+        grid-template-columns: auto auto auto auto;
+    }
+
+    .home__img {
+        min-width: 400px;
+    }
+
+    .home__container {
+        margin-top: 100px;
+        margin-bottom: 50px;
+    }
+
+    .footer__onion {
+        position: absolute;
+        top: 200rem;
+    }
+
 }
 
 .section {
@@ -139,6 +184,8 @@ img {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
+    margin-right: 100px;
 }
 
 .nav__logo,
@@ -159,6 +206,7 @@ img {
 
 .nav__logo {
     width: 25px;
+    margin-left: 50px;
 }
 
 .nav__log:hover {
@@ -234,6 +282,7 @@ img {
     right: -2.5rem;
     bottom: 1rem;
     transform: rotate(-30deg);
+    display: none;
 
 }
 
@@ -248,6 +297,7 @@ img {
     justify-content: center;
     align-items: center;
     column-gap: 1rem;
+    margin-right: 50px;
 }
 
 .change-theme {
@@ -267,6 +317,7 @@ img {
 .home__container {
     row-gap: 3rem;
     padding-top: 2rem;
+
 }
 
 .home__img {
@@ -721,7 +772,7 @@ footer {
 .footer__onion {
     width: 40px;
     position: absolute;
-    top: 2rem;
+    top: 10rem;
     right: 10%;
     transform: rotate(-40deg);
 }
